--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.singlePageLayout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+}
+
+.singlePageContainer {
+  width: 100%;
+  display: flex;
+  min-height: 100px;
+  background-color: pink;
+  text-align: center;
+  vertical-align: middle;
+  margin: 5px;
+
+}
